--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /public/build/
 npm-debug.log
 yarn-error.log
+yarn.lock
 ###< symfony/webpack-encore-bundle ###
 
 ###> squizlabs/php_codesniffer ###
