--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,9 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            logout:
+                path: app_logout
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
